apps/nextcloud/app-deployment.patch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  template:
    spec:
      containers:
        - name: app
          image: docker.io/library/nextcloud:33-apache@sha256:cc99c50156b0fd1ae1930fbd97d6a9286b8e1d563c140220a841035b66c15500
