apps/nextcloud/app-ingress.patch.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: default.beaver-cloud.xyz
      http:
        paths:
          - backend:
              service:
                name: nextcloud-app-service
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - default.beaver-cloud.xyz
      secretName: default.beaver-cloud.xyz
