apps/nextcloud/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: app-volume
        - name: redis-session
          configMap:
            name: redis-session
      containers:
        - name: app
          image: &image docker.io/library/nextcloud:33-apache@sha256:3e676af625884f4e228ac6655f51a4ea65f3a1e68f320ad23d17fccfa00d5b54
          volumeMounts:
            - name: volume
              mountPath: /var/www/html
            - name: redis-session
              mountPath: /usr/local/etc/php/conf.d/redis-session.ini
              subPath: redis-session.ini
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          ports:
            - name: http
              containerPort: 80
        - name: cron
          image: *image
          command:
            [
              /bin/sh,
              -c,
              "while true; do php -f /var/www/html/cron.php; sleep 300; done",
            ]
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: volume
              mountPath: /var/www/html
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: app-volume
#   labels:
#     app.kubernetes.io/component: app
# spec:
#   accessModes: [ReadWriteOnce]
#   storageClassName: longhorn-replicated
#   resources:
#     requests:
#       storage: 10G
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [nextcloud]
